# BFEmblemCreator

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
docs/: algorithm-v2-curve-overlap-gpu.md  algorithm-v3-shared-edge-and-planar-field.md  algorithm-v3-visible-boundary-fitting.md  approximation-algorithm.md  architecture-refactor.md  coding-conventions.md  image-abstraction.md  shared-edge-and-planar-field.md  stamp-constructive-matching.md  technical-design.md  visible-boundary-fitting.md
examples/: sample_emblem.json
src/bf_emblem_creator/: __init__.py  __main__.py  cli.py  models.py  raster.py  render.py  stamps.py
src/bf_emblem_creator/approx/: __init__.py  assemble.py  blocks.py  budget_loop.py  color.py  contour_arcs.py  curves.py  debug_vis.py  depth_order.py  device.py  edge_curve_fit.py  engine.py  gpu_ops.py  index.py  label_field.py  line_quality.py  match_curve.py  metrics.py  models.py  pipeline.py  planar_map.py  planarize.py  preprocess.py  propose.py  recipe.py  regions.py  search.py  special_fx.py  stamp_curves.py  torch_render.py  union_cover.py
src/bf_emblem_creator/approx/processors/: __init__.py  image_processor.py  match_assembler.py  region_partitioner.py  stamp_loader.py  stamp_renderer.py
tests/: test_abstraction_planarize.py  test_approx.py  test_approx_coarse_fine.py  test_approx_pipeline.py  test_approx_v2.py  test_constructive_cover.py  test_contour_area_fit.py  test_debug_vis.py  test_edge_curve_fit.py  test_mode_recipe_engine.py  test_models_and_render.py  test_planar_contour_no_chords.py  test_shared_edge_label_field.py  test_simple_color_merge_curves.py  test_stamp_high_precision_curves.py  test_union_cover.py
